# 3rdparty

./: README.md
dlib-19.17.99/windows/include/dlib/: config.h  revision.h
opencv-3.4.1/windows/include/opencv2/flann/: lsh_index.h  result_set.h
opencv-3.4.1/windows/x64/vc15/lib/: opencv_calib3d341.lib  opencv_core341.lib  opencv_dnn341.lib  opencv_features2d341.lib  opencv_flann341.lib  opencv_highgui341.lib  opencv_imgcodecs341.lib  opencv_imgproc341.lib  opencv_ml341.lib  opencv_objdetect341.lib  opencv_photo341.lib  opencv_shape341.lib  opencv_stitching341.lib  opencv_superres341.lib  opencv_video341.lib  opencv_videoio341.lib  opencv_videostab341.lib
opencv-3.4.3/: _build_android.bat
opencv-3.4.3/android/jni/: opencv.pc
opencv-3.4.3/android/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
opencv-3.4.3/windows/x64/vc15/lib/: opencv_calib3d343.lib  opencv_calib3d343d.lib  opencv_core343d.lib  opencv_dnn343.lib  opencv_dnn343d.lib  opencv_features2d343.lib  (+25 more)
opencv-4.0.1/android/: build.gradle
opencv-4.1.1/android/: build.gradle
opencv-4.4.0/android/: build.gradle
opencv-4.4.0/windows/include/opencv2/: imgproc.hpp
opencv-4.5.2/android/: .gitignore  CMakeLists.txt  build.gradle
opencv-4.5.2/windows/include/opencv2/: imgproc.hpp
poco-1.10.1/windows/cmake/: PocoDataODBCTargets.cmake  PocoDataSQLiteTargets.cmake  PocoDataTargets.cmake  PocoEncodingsTargets.cmake  PocoFoundationTargets.cmake  PocoJSONTargets.cmake  PocoMongoDBTargets.cmake  PocoNetTargets.cmake  PocoRedisTargets.cmake  PocoUtilTargets.cmake  PocoXMLTargets.cmake  PocoZipTargets.cmake
(+159 files in other folders)
